hphp/hack/test/requireclass/typing/parent_02.bad.php.exp
File "parent_02.bad.php", line 15, characters 16-21:
You can only use `parent::` in traits that specify `require extends SomeClass` (Typing[4074])
